--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tiiatcha.github.io/resume_react",
+  "homepage": "https://craigdavison.net",
   "name": "cv",
   "version": "0.1.0",
   "private": true,
